# vibrato

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  diff-ipadic.txt  diff.ipadic-lindeta.txt  diff.ipadic.txt  diff.unidic.txt  mapping.txt  nomap.txt  prepare_mecab-ipadic.sh  prepare_mecab-unidic.sh  prepare_unidic-cwj-3_1_0.sh  prepare_unidic-mecab-2_1_2.sh  tok-ipadic.txt  tok-ipadic2.txt  tok-lindeta.ipadic.txt  tok-unidic.txt  tok.unidic-mecab-2_1_2.txt  tokenized.unidic-mecab-2-1-2.txt  user.csv
.github/ISSUE_TEMPLATE/: bug-report--japanese-.md  bug_report.md  feature_request.md
.github/workflows/: deploy.yml  rust.yml
benchmark/: Cargo.toml
benchmark/data/: wagahaiwa_nekodearu.txt
benchmark/src/: main.rs  timer.rs
compile/: Cargo.toml
compile/src/: main.rs  map.rs  system.rs  user.rs
data/: README.md  user.csv  user_example.csv
data/mappings/: ipadic-mecab-2_7_0.lmap  ipadic-mecab-2_7_0.rmap  unidic-mecab-2_1_2.lmap  unidic-mecab-2_1_2.rmap
data/mappings-bccwj/: ipadic-mecab-2_7_0.rmap  unidic-cwj-3_1_0.lmap  unidic-cwj-3_1_0.rmap  unidic-mecab-2_1_2.lmap
data/mappings-kftt/: unidic-cwj-3_1_0.lmap  unidic-cwj-3_1_0.rmap  unidic-mecab-2_1_2.rmap
dictgen/: Cargo.toml
dictgen/src/: main.rs
docs/: README.md  benchmark.md  compile.md  map.md  prepare.md  small-dic.md  train.md
evaluate/: Cargo.toml
evaluate/src/: main.rs  split.rs
examples/mecab_smalldic/: Cargo.toml  README.md  scrape.py
examples/wasm/: Cargo.toml  README.md  index.html
examples/wasm/i18n/en/: vibrato_wasm.ftl
examples/wasm/i18n/ja/: vibrato_wasm.ftl
examples/wasm/src/: i18n.rs  lib.rs  text_input.rs  token_view.rs
exp_mapping/: Cargo.toml
exp_mapping/src/: main.rs
exp_timeperf/: Cargo.toml
exp_timeperf/src/: main.rs
exp_timeperf_ideal/: Cargo.toml
exp_timeperf_ideal/src/: main.rs
exp_timeperf_large_node/: Cargo.toml
exp_timer/: Cargo.toml
exp_timer/src/: lib.rs
map/: Cargo.toml
map/src/: main.rs  reorder.rs
mapping/: Cargo.toml
mapping/src/: main.rs
parse-mecab-ipadic/: Cargo.toml
parse-mecab-ipadic/src/: main.rs
prepare/: Cargo.toml  README.md
prepare/src/: map.rs  reorder.rs  system.rs  train.rs
resources/: char.def  sudachi.json
runners/: bccwj-cv.sh  bccwj-ideal.sh  bccwj.sh  cv.py  evaluate.py  waganeko.sh  yans_all.sh
scripts/: prepare_ipadic-mecab-2_7_0.sh  prepare_ipadic-mecab-neologd-20200910.sh  prepare_unidic-cwj-3_1_0.sh  prepare_unidic-cwj-3_1_1.sh  prepare_unidic-mecab-2_1_2.sh
test_data/: data_1word.csv  data_3words.csv  mod.rs  test_config_template.json
tiny-lattice/: Cargo.toml
tiny-lattice/src/: connect.rs  lexicon.rs  lib.rs  matrix.rs  sentence.rs  (+2 more)
tinylattice/: Cargo.toml
tinylattice/src/: dictionary.rs  lexicon.rs  lib.rs  morpheme.rs  sentence.rs  serializer.rs  tests.rs  token.rs  tokenizer.rs
tinylattice/src/category/: table.rs
tinylattice/src/dictionary/: category.rs  character.rs  connector.rs  lexicon.rs  mapper.rs  oov.rs  unknown.rs
tinylattice/src/dictionary/category/: map.rs  types.rs
tinylattice/src/dictionary/character/: builder.rs  category.rs
tinylattice/src/dictionary/connection/: parser.rs
tinylattice/src/dictionary/connector/: builder.rs  parser.rs
tinylattice/src/dictionary/lexicon/: builder.rs  feature.rs  map.rs  param.rs  parser.rs  word_feats.rs  word_feature.rs  word_map.rs  word_param.rs  word_params.rs
tinylattice/src/dictionary/lexicon/map/: posting.rs  trie.rs
tinylattice/src/dictionary/lexicon/word_map/: id_lists.rs  posting.rs
tinylattice/src/dictionary/mapper/: builder.rs
tinylattice/src/dictionary/matrix/: parser.rs
tinylattice/src/dictionary/oov/: simple.rs
tinylattice/src/dictionary/unknown/: builder.rs  parser.rs  simple.rs
tinylattice/src/lexicon/: parser.rs  word_map.rs
tinylattice/src/tests/: connection.rs  connector.rs  lexicon.rs  tokenizer.rs
tinylattice/src/tests/resources/: char.def  split_alpha.csv  sudachi.json  sudachi.oov.json  sudachi.regex.json  unk.def  unk2.def
tinylattice/src/tokenizer/: lattice.rs
tinylattice/test_data/: data_2words_3w_refs.csv  lex.csv  with_analysis.rs
tokenize/: Cargo.toml
tokenize/src/: main.rs
tokenized-by-lindera/: tokenized.ipadic.txt
tokenized-by-mecab/: tokenized-ipadic.txt  tokenized-unidic.txt
toy/: data_full_wordinfo.csv  test.rs  wordinfo_test.rs
train/: Cargo.toml
train/src/: main.rs  split.rs
vibrato/: Cargo.toml  README.md
vibrato/src/: common.rs  dictionary.rs  errors.rs  feature_extractor.rs  feature_rewriter.rs  lib.rs  mecab.rs  num.rs  sentence.rs  state.rs  test_utils.rs  tests.rs  token.rs  tokenizer.rs  trainer.rs  trainer_config.rs  utils.rs  worker.rs
vibrato/src/dictionary/: builder.rs  character.rs  connector.rs  context_id.rs  lexicon.rs  mapper.rs  unknown.rs  word_idx.rs
vibrato/src/dictionary/character/: builder.rs  category.rs
vibrato/src/dictionary/connector/: builder.rs  dual_connector.rs  matrix_connector.rs  raw_connector.rs  scorer.rs
vibrato/src/dictionary/connector/raw_connector/: scorer.rs
vibrato/src/dictionary/context_id/: builder.rs
vibrato/src/dictionary/lexicon/: builder.rs  feature.rs  map.rs  param.rs
vibrato/src/dictionary/lexicon/map/: posting.rs  trie.rs
vibrato/src/dictionary/mapper/: builder.rs
vibrato/src/dictionary/unknown/: builder.rs
vibrato/src/tests/: connector.rs  lexicon.rs  tokenizer.rs  tokenizer_mecab.rs  tokenizer_standard.rs  trainer.rs
vibrato/src/tests/resources/: README.md  char.def  corpus.txt  feature.def  left-id.def  lex.csv  rewrite.def  system.dic  train_lex.csv  train_unk.def  unk.def  user.csv
vibrato/src/tokenizer/: lattice.rs  worker.rs
vibrato/src/trainer/: config.rs  corpus.rs  feature_extractor.rs  feature_rewriter.rs  model.rs
waganeko-mapping/: ipadic-mecab-2_7_0.lmap  ipadic-mecab-2_7_0.rmap  unidic-cwj-3_1_0.lmap  unidic-cwj-3_1_0.rmap  unidic-mecab-2_1_2.lmap  unidic-mecab-2_1_2.rmap  waganeko.unidic-cwj.lprobs  waganeko.unidic-cwj.rprobs  waganeko.unidic-mecab.rprobs
wasm/: Cargo.toml  index.html
wasm/src/: lib.rs  text_input.rs  token_view.rs
(+14 files in other folders)
