[package]
name = "benchmark"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []

unchecked = []

[dependencies]
vibrato = { path = "../vibrato" }
bincode = "2.0.0-rc.1"  # MIT
clap = { version = "3.1", features = ["derive"] }  # MIT or Apache-2.0
