[package]
name = "benchmark"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []

unchecked = []

[dependencies]
vibrato = { path = "../vibrato" }
clap = { version = "3.1", features = ["derive"] }  # MIT or Apache-2.0
