[package]
name = "evaluate"
version = "0.1.0"
edition = "2021"

default-run = "evaluate"

[dependencies]
clap = { version = "4.0", features = ["derive"] }  # MIT or Apache-2.0
csv-core = "0.1.10"  # Unlicense or MIT
rand = "0.8"  # MIT or Apache-2.0
vibrato = { path = "../vibrato" }  # MIT or Apache-2.0

[[bin]]
name = "split"
path = "src/split.rs"
