[package]
name = "exp_timeperf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
exp-ideal = ["tinylattice/exp-ideal"]

[dependencies]
tinylattice = { path = "../tinylattice" }
exp_timer = { path = "../exp_timer" }
clap = { version = "3.1", features = ["derive"] }  # MIT or Apache-2.0
