[package]
name = "map"
version = "0.1.0"
edition = "2021"
rust-version = "1.65"

default-run = "map"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []

[dependencies]
vibrato = { path = "../vibrato" }
clap = { version = "4.0", features = ["derive"] }  # MIT or Apache-2.0
zstd = "0.12"  # MIT

[[bin]]
name = "reorder"
path = "src/reorder.rs"
