[package]
name = "tinylattice"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
bitflags = "1.3" # MIT/Apache 2.0
csv = "1.1"
yada = "0.5" # MIT/Apache 2.0

[features]
default = []
exp-ideal = []
