[package]
name = "tinylattice"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
bincode = "2.0.0-rc.1"  # MIT
bitflags = "1.3" # MIT/Apache 2.0
csv = "1.1"
crawdad = { git = "https://github.com/daac-tools/crawdad", rev = "74c401b" }

[features]
default = []
exp-ideal = []
