[package]
name = "tokenize"
version = "0.1.0"
edition = "2021"
rust-version = "1.64"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []

[dependencies]
atty = "0.2"  # MIT
vibrato = { path = "../vibrato" }
clap = { version = "4.0", features = ["derive"] }  # MIT or Apache-2.0
zstd = "0.12"  # MIT
