[package]
name = "vibrato"
version = "0.1.1"
edition = "2021"
authors = ["Shunsuke Kanda <shnsk.knd@gmail.com>"]
description = "Vibrato: viterbi-based accelerated tokenizer"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/daac-tools/vibrato"
repository = "https://github.com/daac-tools/vibrato"
readme = "README.md"
keywords = ["japanese", "analyzer", "tokenizer", "morphological"]
categories = ["text-processing"]

[dependencies]
bincode = "2.0.0-rc.1"  # MIT
crawdad = "0.3.0"  # MIT or Apache-2.0
csv-core = "0.1.10"  # Unlicense or MIT
hashbrown = "0.12"  # MIT or Apache-2.0
regex = "1"  # MIT or Apache-2.0
rucrf = "0.1.0"  # MIT or Apache-2.0
