[package]
name = "vibrato"
version = "0.2.0"
edition = "2021"
authors = [
    "Shunsuke Kanda <shnsk.knd@gmail.com>",
    "Koichi Akabe <vbkaisetsu@gmail.com>",
]
description = "Vibrato: viterbi-based accelerated tokenizer"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/daac-tools/vibrato"
repository = "https://github.com/daac-tools/vibrato"
readme = "README.md"
keywords = ["japanese", "analyzer", "tokenizer", "morphological"]
categories = ["text-processing"]

[dependencies]
bincode = "=2.0.0-rc.2" # MIT
bincode_derive = "=2.0.0-rc.2" # MIT
crawdad = "0.3.0" # MIT or Apache-2.0
csv-core = "0.1.10" # Unlicense or MIT
hashbrown = "0.12" # MIT or Apache-2.0
regex = "1" # MIT or Apache-2.0
rucrf = "0.3.2" # MIT or Apache-2.0
