[package]
name = "vibrato-wasm"
version = "0.1.0"
edition = "2021"
authors = [
    "Koichi Akabe <vbkaisetsu@gmail.com>",
]

[dependencies]
gloo-worker = "0.2.1" # MIT or Apache-2.0
i18n-embed = { version = "0.13.8", features = ["fluent-system", "web-sys-requester"]}  # MIT
i18n-embed-fl = "0.6.5"  # MIT
once_cell = "1.17.0"  # MIT or Apache-2.0
ouroboros = "0.15.5" # MIT or Apache-2.0
rust-embed = "6.4.2"  # MIT
serde = "1" # MIT or Apache-2.0
vibrato = { path = "../../vibrato", default-features = false } # MIT or Apache-2.0
wasm-bindgen = "0.2.83" # MIT or Apache-2.0
web-sys = { version = "0.3", features = ["Event", "EventTarget", "InputEvent"] } # MIT or Apache-2.0
yew = { version = "0.20", features = ["csr"] } # MIT or Apache-2.0

[profile.release]
panic = "abort"
codegen-units = 1
opt-level = "z"
lto = true
